# theflyinglife

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
tests/: test_dcs.py  test_plates.py  test_remarks.py
tfl/: configuration.py  events.py  exception_handlers.py  instances.py  middleware.py  pdf.py  site_routing.py
tfl/api_v1/: weather.py
tfl/api_v2/: dcs.py  metars.py  procedures.py  tafs.py
tfl/application_services/: adds.py  airport.py  auth.py  dcs.py  dtpp.py  member.py  metar.py  taf.py
tfl/domain/: core.py  exceptions.py  facilities.py  member.py  remarks.py  weather.py  weather_translations.py
tfl/domain/factories/: weather.py
tfl/domain/interfaces/: facility.py  members.py  uow.py  weather.py
tfl/domain/services/: core.py  dtpp.py  member.py  weather.py
tfl/infrastructure/: airport.py  auth.py  member.py  metar.py  taf.py  uow.py
tfl/site/markdown/airports/: klgb.md
tfl/site/static/css/: blog.css  styles.css
tfl/site/templates/: airports.html  base.html  main.html  test.html
tfl/site/templates/member/: login.html  profile.html  register.html
tfl/site/views/: airports.py  main.py  member.py
