[tool.poetry]
name = "theflyinglife"
version = "0.1.0"
description = ""
authors = ["Derek Fitzpatrick <dfitz.murrieta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
python-dateutil = "^2.8.2"
htmllistparse = "^0.6.0"
aiohttp = "^3.8.1"
xmltodict = "^0.12.0"
Jinja2 = "^3.0.3"
Markdown = "^3.3.6"
sentry-sdk = "^1.5.2"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-multipart = "^0.0.5"
itsdangerous = "^2.0.1"
pydantic-forms = {path = "../pydantic-forms"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aioredis = "^2.0.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
