[project]
name = "theflyinglife"
version = "0.1.0"
description = ""
authors = [{ name = "Derek Fitzpatrick", email = "dfitz.murrieta@gmail.com" }]
requires-python = "~=3.10.0"
dependencies = [
    "python-dateutil>=2.8.2,<3",
    "htmllistparse>=0.6.0,<0.7",
    "aiohttp>=3.8.1,<4",
    "xmltodict>=0.12.0,<0.13",
    "Jinja2>=3.0.3,<4",
    "Markdown>=3.3.6,<4",
    "pydantic[email]>=1.9.0,<2",
    "python-multipart>=0.0.5,<0.0.6",
    "passlib[bcrypt]>=1.7.4,<2",
    "aioredis>=2.0.1,<3",
    "pytest>=7.1.1,<8",
    "gunicorn>=20.1.0,<21",
    "fastapi>=0.75.0,<0.76",
    "itsdangerous>=2.1.2,<3",
    "sentry-sdk>=1.5.8,<2",
    "uvicorn==0.14.0",
    "pydantic-forms",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "pypdf>=5.8.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
pydantic-forms = { git = "https://github.com/dfitzpatrick/pydantic-forms" }

